# Autom8

./: .gitignore  README.md
jira/: epic-summarizer.py  jira-environment-setup.sh
openapi/: api-backstager.py  api-repo-environment-setup.sh
web/arch-crawler-exporter/: .env  README.md  environment.yml  pyproject.toml
web/arch-crawler-exporter/src/arch-crawler-exporter/: aws-config.json  azure-config.json  config-single.json  config.json  crawler-exporter.py  gcloud-config.json
web/arch-crawler-exporter/src/arch-crawler-exporter/classes/: config.py  crawler.py  exporter.py
web/arch-crawler-exporter/src/arch-crawler-exporter/scripts/: img_in_page.py  slotter.py
web/arch-crawler-exporter/tools/: conda_export.sh  conda_import.sh  conda_update.sh
web/img-crawler-downloader/: README.md  environment.yml  pyproject.toml
web/img-crawler-downloader/src/img_crawler_downloader/: config.json  crawler-puller.py  response.json  slotter.py
web/img-crawler-downloader/src/img_crawler_downloader/classes/: arch.py  arch_info.py  config.py  crawler.py  exporter.py
web/img-crawler-downloader/src/img_crawler_downloader/scripts/: slotter.py
web/img-crawler-downloader/tools/: conda_import.sh  conda_setup.sh  conda_update.sh
