[tool.poetry]
name = "img-crawler-downloader"
version = "0.1.0"
description = "Crawls paginated sites and pulls all images"
authors = ["Sachin Kumar Anumula"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
bs4 = "^0.0.2"
requests = "^2.31.0"
conda-lock = "^2.5.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
